--- a/NZWalks/NZWalks.API/appsettings.json
+++ b/NZWalks/NZWalks.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalks": "server=DESKTOP-FKQ64UI;database=NZWalksDb;Trusted_Connection=true;Encrypt=False"
+  }
 }
